--- a/src/hidden.css
+++ b/src/hidden.css
@@ -1,2 +1,10 @@
+.hideable {
+    position: fixed;
+    background-color: white;
+    top: 65px;
+    padding: 20px;
+}
+
+
 .hidden { 
     display:none; }
