--- a/src/index.css
+++ b/src/index.css
@@ -1,51 +1,77 @@
 body {
   margin: 0 0;
-  padding: 0 0;
+  padding: 0;
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  height: 100vh;
+  width: 100vw;
 }
 
 .editor {
-  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-flow: column wrap;
-  margin: 0 0;
-  padding: 0 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  margin: 60px 0;
+  padding: 0;
   width: 100%;
 }
 
 @media (min-width: 725px) {
   .editor {
-    flex-flow: row wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
   }
 }
 
 .textInput {
   margin: 0 0;
-  padding: 0 2%;
-  flex: 1 0 350px;
+  padding: 2%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 350px;
+          flex: 1 0 350px;
   color: white;
   background-color: black;
   height: 42vh;
-  order: 1;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 
 @media (min-width: 725px) {
   .textInput {
-    height: 88vh;
-    order: 0;
+    height: 92vh;
+    -webkit-box-ordinal-group: 1;
+        -ms-flex-order: 0;
+            order: 0;
   }
 }
 
 .viewArea {
-  flex: 1 0 375px;
-  margin: 0px 0px;
-  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 375px;
+          flex: 1 0 375px;
 }
 
 .viewer {
-  padding: 0px 20px;
+  padding-left: 20px;
   color: black;
   background-color: white;
-  position: relative;
 }
+
+.viewer >h1 {
+  padding: 0px 0px;
+}
+
+input[type=file] {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  z-index: -1;
+}
+
