--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,18 @@ body {
   padding: 0;
   font-size: 16px;
   height: 100vh;
-  width: 100vw;
+}
+
+.root {
+  margin: 0 0;
+  padding: 0 0;
+}
+
+.App {
+  margin: 0px 0;
+  padding: 0px 0;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .editor {
@@ -12,19 +23,19 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
-  margin: 60px 0;
-  padding: 0;
-  width: 100%;
+  -ms-flex-flow: column wrap;
+  flex-flow: column wrap;
+  padding: 60px 0;
+  width: calc(100% + 15px);
+  height: calc(100% - 68px);
 }
 
 @media (min-width: 725px) {
   .editor {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
   }
 }
 
@@ -32,38 +43,38 @@ body {
   margin: 0 0;
   padding: 2%;
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 350px;
-          flex: 1 0 350px;
+  -ms-flex: 1 0 350px;
+  flex: 1 0 350px;
   color: white;
   background-color: black;
-  height: 42vh;
   -webkit-box-ordinal-group: 2;
-      -ms-flex-order: 1;
-          order: 1;
+  -ms-flex-order: 1;
+  order: 1;
 }
 
 @media (min-width: 725px) {
   .textInput {
-    height: 92vh;
     -webkit-box-ordinal-group: 1;
-        -ms-flex-order: 0;
-            order: 0;
+    -ms-flex-order: 0;
+    order: 0;
   }
 }
 
 .viewArea {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 375px;
-          flex: 1 0 375px;
+  flex: 1 0 375px;
+  height: 100%;
+  overflow-x: scroll;
 }
 
 .viewer {
+  margin: 0 0;
   padding-left: 20px;
   color: black;
+  padding-right: 20px;
   background-color: white;
 }
 
-.viewer >h1 {
+.viewer>h1 {
   padding: 0px 0px;
 }
 
@@ -71,7 +82,5 @@ input[type=file] {
   width: 0.1px;
   height: 0.1px;
   opacity: 0;
-  overflow: hidden;
   z-index: -1;
 }
-
